mosh html css pt.1

--- a/html n css part 1/4.CSS basics/13. shadows/index.html
+++ b/html n css part 1/4.CSS basics/13. shadows/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./12css/12.normalize.css" />
-    <link rel="stylesheet" href="./12css/12.style.css" />
-    <title>12. borders</title>
+    <link rel="stylesheet" href="./13css/13.normalize.css" />
+    <link rel="stylesheet" href="./13css/13.style.css" />
+    <title>13. shadows</title>
     <style></style>
   </head>
 
@@ -17,8 +17,10 @@
      *  
     ]
  -->
-<div class="box"></div>
-<div class="circle"></div>
+<div class="box">
+  <h1>Heading</h1>
+</div>
+
 
 
 
